--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,12 @@
 {
   "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+    "rewrites": [{
+      "source": "/",
+      "run": {
+        "serviceId": "two47dink",
+        "region": "us-central1",
+        "pinTag": true
+      }
+    }]
   }
 }
