--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,22 @@ services:
       dockerfile: Dockerfile
       target: builder
     command: gow run main.go
+    depends_on:
+      - fs
     volumes:
       - ./server:/app:ro
-      - ./dink-412003-d93fb5f618ba.json:/dink-412003-d93fb5f618ba.json:ro
+#      - ./dink-412003-d93fb5f618ba.json:/dink-412003-d93fb5f618ba.json:ro
     environment:
       - HOST=0.0.0.0
-      - AUTH_KEY=/dink-412003-d93fb5f618ba.json
+#      - AUTH_KEY=/dink-412003-d93fb5f618ba.json
       - SENTRY_DSN=https://3811839bf077e9e5733103f1a295752c@o4506735924019200.ingest.us.sentry.io/4507076127424512
-      - SHARED_TOKEN=339aba4a-d7c1-4b35-a8bd-d2ebb00fb258
+      - SHARED_SECRET=339aba4a-d7c1-4b35-a8bd-d2ebb00fb258
+      - FIRESTORE_PROJECT_ID=d-ink-4bf48
+      - FIRESTORE_EMULATOR_HOST=fs:8080
     ports:
       - 8080:8080
+
+  fs:
+    image: mtlynch/firestore-emulator-docker
+    environment:
+      - FIRESTORE_PROJECT_ID=d-ink-4bf48
