This is now deployed and working.

--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,9 @@
 {
   "hosting": {
     "rewrites": [{
-      "source": "/",
+      "source": "/**",
       "run": {
-        "serviceId": "two47dink",
+        "serviceId": "two47d-ink",
         "region": "us-central1",
         "pinTag": true
       }
