--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,9 +3,7 @@ on: [pull_request]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: 'read'
-      id-token: 'write'
+    permissions: write-all
 
     steps:
     - uses: 'actions/checkout@v4'
