Only run on MERGED pr.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     permissions: write-all
+    if: github.event.pull_request.merged == true
 
     steps:
     - uses: 'actions/checkout@v4'
