--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,10 @@
 name: Deploy
-on: [pull_request]
+
+on:
+  pull_request:
+    types:
+      - closed
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
