--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
         service: 'two47d-ink'
         image: 'us-central1-docker.pkg.dev/d-ink-4bf48/two47d-ink/247d.ink:latest'
         env_vars: |
-          SHARED_SECRET=${{ secrets.SHARED_SECRET }}
+          DINK247_SHARED_SECRET=${{ secrets.DINK247_SHARED_SECRET }}
           FIRESTORE_PROJECT_ID=d-ink-4bf48
           DEFAULT_REDIRECT=https://www.247dink.com/
           SENTRY_DSN=${{ secrets.SENTRY_DSN }}
