Add Python quality checks.

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,5 +1,17 @@
+deps:
+	pipenv install --dev
+
+
 sdist:
 	pipenv run python3 setup.py sdist
+
+
+mypy: deps
+	pipenv run mypy .
+
+
+lint: deps
+	pipenv run flake8 .
 
 
 clean:
