--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,11 @@ jobs:
     - name: Check out
       uses: actions/checkout@v4
 
+    - uses: actions/setup-go@v5
+      with:
+        go-version: '1.22'
+        cache: false
+
     - name: Lint
       uses: golangci/golangci-lint-action@v5
       with:
